--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -7,16 +7,16 @@
     src: url('./leaguespartan-bold-webfont.woff') format('woff');
   }
 
-  html{
-      @apply bg-black
-  }
+html{
+    @apply bg-slate-800
+}
 
 body{
-    @apply bg-amber-100 border-t-8 border-t-cyan-900 py-10
+    @apply bg-amber-100 border-t-8 border-t-cyan-900 py-10 
 }
 
 menu{
-    @apply flex flex-row justify-center gap-8 mb-5 lg:fixed lg:top-5 lg:right-5 lg:flex-col
+    @apply flex flex-row justify-center gap-8 mb-5 lg:fixed lg:top-12 lg:right-5 lg:flex-col lg:gap-3
 }
     menu li{
         @apply lg:flex-wrap lg:col-span-1
@@ -41,7 +41,7 @@ main{
 
 
 h1{
-    @apply text-emerald-700 mb-5 text-center text-4xl font-leaguespartan drop-shadow-md shadow-emerald-800
+    @apply leading-tight text-emerald-700 mb-5 text-center text-4xl font-leaguespartan drop-shadow-md shadow-emerald-800
 }
 
     h1 span {
@@ -57,10 +57,14 @@ h2{
 }
 
 header {
-    @apply mb-10 px-10 lg:grid lg:grid-cols-7
+    @apply mb-10 px-10 lg:grid lg:grid-cols-12 lg:px-0
 }
     header h1{
-        @apply  lg:row-span-1 lg:col-start-3 lg:col-span-4 lg:text-left
+        @apply  lg:row-span-1 lg:col-start-4 lg:col-span-6 lg:text-left
+    }
+
+    header mark{
+        @apply bg-transparent text-emerald-800
     }
 
     header h1 span{
@@ -68,7 +72,7 @@ header {
     }
 
     header picture{
-        @apply mb-5 block lg:row-span-2 lg:col-start-1 lg:row-start-1 lg:col-span-2
+        @apply mb-5 block lg:row-span-2 lg:col-start-1 lg:row-start-1 lg:col-span-3 
     }
 
     header picture img {
@@ -80,7 +84,7 @@ header {
     }
 
     header blockquote {
-        @apply text-center lg:text-left font-serif text-slate-600 lg:row-span-1 lg:col-start-3 lg:col-span-4
+        @apply text-center lg:text-left font-serif text-slate-600 lg:row-span-1 lg:col-start-4 lg:col-span-6
     }
 
     header blockquote i {
@@ -94,6 +98,8 @@ header {
     header blockquote time span {
         @apply font-normal not-italic
     }
+
+
 
 
 nav{
