--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -190,11 +190,11 @@ article h2{
 }
 
 #projects section{
- @apply container mx-auto lg:grid lg:grid-flow-col lg:gap-5  
+ @apply container mx-auto w-full max-w-5xl p-5 pb-10 mb-10 gap-5 columns-3 space-y-5 break-inside-avoid
 }
 
 #projects div{
-    @apply  m-5 p-6 shadow-lg bg-cyan-900 rounded-lg border lg:col-span-3
+    @apply  m-5 p-6 shadow-lg bg-cyan-900 rounded-lg border break-inside-avoid
 }
 
 #projects h3{
